package ucf.assignments;

public class search {

        private String searchSerialNumber;
        private String searchName;


        public String getSearchSerialNumber() {
            return searchSerialNumber;
        }

        public String getSearchName() {
            return searchName;
        }

        public search(String searchSerialNumber, String searchName) {
            super();
            this.searchSerialNumber = searchSerialNumber;
            this.searchName = searchName;
        }
    }
